# hope

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  hope-config.cmake.in
.github/workflows/: cmake.yml  test.yml
include/hope/: hope.h  support.h
test/: CMakeLists.txt  hope.c
